# Nafka

./: .clang-format  CMakeLists.txt  README.md  main.cpp
Client/: Client.cpp  Client.h
Connection/Api/: Api.h  ApiFactory.h
Connection/Connection/: Connection.cpp  Connection.h
Connection/Helper/: Helper.h
Connection/Request/: Request.cpp  Request.h
Connection/Response/: Response.cpp  Response.h
Logger/: Logger.h
Server/: Server.cpp  Server.h
